--- a/app/src/main/res/layout/activity_doctor_details2.xml
+++ b/app/src/main/res/layout/activity_doctor_details2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/back1"
+    android:background="@drawable/back2"
     tools:context=".DoctorDetailsActivity_2">
 
 
@@ -39,16 +39,18 @@
 
     <ListView
         android:id="@+id/listViewDD"
+        android:layout_width="350dp"
+        android:layout_height="520dp"
         android:layout_margin="10dp"
-        android:layout_height="500dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:textColor = "@color/colorRed"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewDDTitle"
-        android:layout_width="wrap_content"/>
+        app:layout_constraintTop_toTopOf="@+id/textViewDDName"
+        app:layout_constraintVertical_bias="0.629" />
 
     <Button
         android:id="@+id/buttonDDBack"
