--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -36,12 +36,12 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="24&quot;7 HealthCare"
+        android:text="CareCompass"
         android:textColor="@color/purple_200"
         android:textColorHighlight="#009688"
         android:textColorHint="#0C0C0C"
         android:textColorLink="#15B6A7"
-        android:textSize="34sp"
+        android:textSize="48sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
