--- a/app/src/main/res/layout/activity_card_lab.xml
+++ b/app/src/main/res/layout/activity_card_lab.xml
@@ -7,6 +7,42 @@
     android:background="@drawable/background"
     tools:context="com.CardLabActivity">
 
+        <TextView
+            android:id="@+id/textViewCartTotalCost"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:text="Total Cost : 2000/-"
+            android:textColor="@color/yellowLight"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/listViewCard" />
+
+        <Button
+            android:id="@+id/buttonCardTime"
+            style="?android:spinnerStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="10:00"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.925"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView5"/>
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:text="Select Time"
+            android:textColor="@color/yellowLight"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.928"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewCartTotalCost" />
+
         <Button
             android:id="@+id/buttonCardCheckout"
             android:layout_width="wrap_content"
@@ -16,23 +52,10 @@
             android:textAllCaps="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.092"
+            app:layout_constraintHorizontal_bias="0.095"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
-            android:id="@+id/textViewCardTitle2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Lab Test and Packages"
-            android:textColor="@color/yellowLight"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewDDName"
-            app:layout_constraintVertical_bias="0.073" />
+
 
         <TextView
             android:id="@+id/textViewDDName"
@@ -44,17 +67,30 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.002" />
+            app:layout_constraintVertical_bias="0.023" />
 
         <TextView
             android:id="@+id/textViewDDTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Deliver Location : Khulna"
+            android:text="Deliver Location : Gazipur"
             android:textColor="@color/colorWhite"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewDDName"
+            app:layout_constraintVertical_bias="0.012" />
+        <TextView
+            android:id="@+id/textViewCardTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Lab Test and Packages"
+            android:textColor="@color/yellowLight"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -62,20 +98,22 @@
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewDDName"
-            app:layout_constraintVertical_bias="0.016" />
-
+            app:layout_constraintVertical_bias="0.071" />
         <ListView
             android:id="@+id/listViewCard"
-            android:layout_width="315dp"
-            android:layout_height="429dp"
+            android:layout_width="358dp"
+            android:layout_height="338dp"
             android:layout_margin="10dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
             android:layout_marginStart="16dp"
-            android:textColor="@color/colorRed"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.571"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textViewDDName"
-            app:layout_constraintVertical_bias="0.416" />
+            app:layout_constraintTop_toTopOf="@+id/textViewDDTitle"
+            app:layout_constraintVertical_bias="0.166" />
 
         <Button
             android:id="@+id/buttonCardBack"
@@ -85,7 +123,33 @@
             android:text="BACK"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.904"
+            app:layout_constraintHorizontal_bias="0.907"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:text="Select Date"
+            android:textColor="@color/yellowLight"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.082"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textViewCartTotalCost"
+            tools:layout_editor_absoluteX="27dp"
+            tools:layout_editor_absoluteY="594dp" />
+
+        <Button
+            android:id="@+id/buttonCardDate"
+            style="?android:spinnerStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="27/10/2022"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.092"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textView3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
