--- a/app/src/main/res/layout/activity_lab_test.xml
+++ b/app/src/main/res/layout/activity_lab_test.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/back2"
-    tools:context="com.LabTestActivity">
+    tools:context=".LabTestActivity">
 
     <Button
         android:id="@+id/buttonCardCheckout"
