--- a/app/src/main/res/layout/activity_doctor_details2.xml
+++ b/app/src/main/res/layout/activity_doctor_details2.xml
@@ -38,7 +38,7 @@
         app:layout_constraintVertical_bias="0.01999998" />
 
     <ListView
-        android:id="@+id/listViewCard"
+        android:id="@+id/listViewBMCard"
         android:layout_width="350dp"
         android:layout_height="520dp"
         android:layout_margin="10dp"
@@ -53,7 +53,7 @@
         app:layout_constraintVertical_bias="0.629" />
 
     <Button
-        android:id="@+id/buttonCardBack"
+        android:id="@+id/buttonBMCardBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="BACK"
