--- a/app/src/main/res/layout/activity_health_articles_details.xml
+++ b/app/src/main/res/layout/activity_health_articles_details.xml
@@ -9,19 +9,18 @@
 
     <TextView
         android:id="@+id/textViewHADTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="176dp"
+        android:layout_width="296dp"
+        android:layout_height="33dp"
         android:text="DENTIST"
         android:textColor="@color/colorWhite"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_logo3"
-        app:layout_constraintVertical_bias="0.015" />
+        app:layout_constraintVertical_bias="0.028" />
 
     <TextView
         android:id="@+id/textView_logo3"
@@ -33,7 +32,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.614"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.023" />
@@ -50,17 +49,17 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageViewHAD"
-        app:layout_constraintVertical_bias="0.59" />
+        app:layout_constraintVertical_bias="0.592" />
 
     <ImageView
         android:id="@+id/imageViewHAD"
-        android:layout_width="366dp"
-        android:layout_height="547dp"
+        android:layout_width="381dp"
+        android:layout_height="512dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewHADTitle"
-        tools:layout_editor_absoluteX="22dp"
-        tools:layout_editor_absoluteY="110dp"
         tools:srcCompat="@drawable/health1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
